update some style in project

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!-- main bootstrap file -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- main css file -->
-    <link rel="stylesheet" href="css/abdelkareem.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>template 3</title>
 </head>
       <!-- for scroll spy -->
 <body ata-bs-spy="scroll" data-bs-target="#navbar-SPY">
     <!-- start navbar -->
-    <nav class="navbar navbar-expand-lg" id="#navbar-SPY">
+    <nav class="navbar navbar-expand-lg  id="#navbar-SPY">
         <div class="container position-relative">
-          <a class="navbar-brand fw-bold" href="#">Abdelkareem</a>
+          <a class="navbar-brand fw-bold" href="#">M.SAMIR</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main" aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-bars fs-2 "></i>
           </button>
@@ -81,7 +81,7 @@
         <div class="container ">
             <div class="row d-flex align-items-center ">
                 <div class="col-lg-6 col-md-12 col-sm-12 landing-text text-center text-md-start">
-                    <h1 class="fw-bold">Welcome, To 3bdelkareem World </h1>
+                    <h1 class="fw-bold">Welcome, To M.SAMIR'S World </h1>
                     <p class="fs-4 text-black-50 ">
                         Here Iam gonna share everything about my life.
                          Books Iam reading, Games Iam Playing, 
@@ -991,7 +991,7 @@
         </div>
       </div>
       <div class="py-4 mt-4 d-flex align-items-center justify-content-center foot5">
-        Made With 3 By Abdelkareem
+        Made With 3 By M.SAMIR
       </div>
    </footer>
    <!-- end footer -->
