--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
       <div class="container">
         <div class="row">
           <div class=" mt3 col-lg-3 col-md-6 col-sm-12 text-lg-start text-md-center foot1">
-            <h1>Abdelkareem</h1>
+            <h1>M.SAMIR</h1>
             <div class="social my-4">
               <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f "></i></a>
               <a href="http://www.instagram.com"><i class="fa-brands fa-instagram "></i></a>
